# sbncode

./: NueSelection.cxx  NueSelection.h  Utilities.h
sbnanalysis/: .gitignore  STYLE.md
sbnanalysis/ana/: CMakeLists.txt
sbnanalysis/ana/ExampleAnalysis/: AnalysisMacro.cpp  CMakeLists.txt  ExampleSelection.cxx  ExampleSelection.h
sbnanalysis/ana/NuMuSelection/: CMakeLists.txt  Chi2Macro.cxx  NuConfig.json  NuMuUtil.cc  NuMuUtil.hh  RecobInteraction.h  SelectCosmic.cxx  SelectCosmic.h  SelectNu.cxx  SelectNu.h  linkdef.h  out_pandora_nu
sbnanalysis/ana/NuMuSelection/DataTypes/: CMakeLists.txt  RecobInteraction.h
sbnanalysis/ana/NuMuSelection/Macro/: ExampleEventMacro.cxx  MakeHistos.cxx  OscChi2.cxx
sbnanalysis/ana/NuMuSelection/Plot/: osc_ratio.py
sbnanalysis/ana/NuMuSelection/PostProcess/: CMakeLists.txt  MakeHistos.cc  MakeHistos.h  OscChi2.cc  OscChi2.h  linkdef.h
sbnanalysis/ana/NuMuSelection/Selection/: CMakeLists.txt  NuConfig.json  SelectCosmic.cxx  SelectCosmic.h  SelectNu.cxx  SelectNu.h
sbnanalysis/ana/SBNOsc/: ActExp.C  CMakeLists.txt  Chi2Sensitivity.cxx  Chi2Sensitivity.h  Covariance.cxx  Covariance.h  NueSelection.cxx  NueSelection.h  NumuSelection.cxx  NumuSelection.h  Utilities.cxx  Utilities.h  sbn-cov.cxx  sbn-sensitivity.cxx  testCov.cpp
sbnanalysis/ana/SBNOsc/MakeHist/: AcceptanceStack.C  GenType.C  InteractionType.C  RatioPlotNue.C  ShowerTypeStack.C  TrueNueStack.C
sbnanalysis/ana/SBNOsc/MakePlots/: MakePlots.py
sbnanalysis/ana/SBNOsc/config/: CovarianceConfig.json  NueConfig.json  NumuConfig.json  NumuConfigProposalIcarus.json  NumuConfigProposalSBND.json  NumuConfigProposalUboone.json
sbnanalysis/ana/SBNOsc/config/fiducial_volumes/: Icarus.json  SBND.json  Uboone.json
sbnanalysis/ana/TruthSelection/: CMakeLists.txt  Selections.cxx  Selections.h  TruthSelection.cxx  TruthSelection.h  TruthSelectionConfig.json
sbnanalysis/core/: CMakeLists.txt  Event.hh  PostProcessorBase.cxx  PostProcessorBase.hh  ProcessorBase.cxx  ProcessorBase.hh  ProcessorBlock.cxx  linkdef.h  sbn-postprocess.cxx  static.cxx
sbnanalysis/examples/: README.md
sbnanalysis/examples/standalone_root/: .gitignore  Makefile  README.md  eventdump.cxx
sbnanalysis/util/: Interaction.cxx  Interaction.hh
sbncode/NuMuSelection/: AssocTruthProducer_module.cc  CMakeLists.txt  PandoraTesting_module.cc
sbncode/NuMuSelection/Algorithms/: CMakeLists.txt  FiducialVolume.cxx  FiducialVolume.h
sbncode/NuMuSelection/DataTypes/: classes.h  classes_def.xml
sbncode/NuMuSelection/fcl/: fiducial_volume_settings.fcl  uboone_assoc_truth.fcl  uboone_pandora.fcl
ups/: product_deps
